--- a/app/styles/components/footer.css
+++ b/app/styles/components/footer.css
@@ -11,7 +11,6 @@ footer .footer-links {
 }
 
 footer .footer-call {
-  width: 240px;
   flex-direction: column;
 }
 
